Add comment edit and delete from the right sidebar

--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -33,13 +33,13 @@
   z-index: 101;
 }
 
-.comment-body {
+.comments-container .comment-body {
   display: flex;
   flex-direction: row;
   padding: 1rem;
 }
 
-.comment-avatar {
+.comments-container .comment-avatar {
   background: #7ed8c8;
   width: 44px;
   height: 44px;
