--- a/src/ui/components/RightSidebar/RightSidebar.css
+++ b/src/ui/components/RightSidebar/RightSidebar.css
@@ -7,7 +7,7 @@
   flex-shrink: 0;
 }
 
-.right-sidebar button {
+.right-sidebar .drawer button {
   border: 4px solid transparent;
   border-radius: 8px;
   cursor: pointer;
@@ -17,24 +17,13 @@
   padding: 8px;
   border-left: 2px solid var(--grey-20);
 }
-.right-sidebar button:hover,
-.right-sidebar.expanded button,
-.right-sidebar.expanded button:focus {
+.right-sidebar .drawer button:hover,
+.right-sidebar.expanded .drawer button,
+.right-sidebar.expanded .drawer button:focus {
   background: var(--grey-20);
 }
 
-.right-sidebar button:focus {
+.right-sidebar .drawer button:focus {
   outline: 0;
   background-color: transparent;
-}
-
-.right-sidebar .comment-icon {
-  width: 20px;
-  height: 20px;
-}
-
-.right-sidebar button.comment {
-  mask-repeat: no-repeat;
-  background-color: #969696;
-  mask-position: center;
 }
