--- a/src/ui/components/RightSidebar/RightSidebar.css
+++ b/src/ui/components/RightSidebar/RightSidebar.css
@@ -16,6 +16,9 @@
 .right-sidebar .drawer {
   padding: 8px;
   border-left: 2px solid var(--grey-20);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .right-sidebar .drawer button:hover,
 .right-sidebar.expanded .drawer button,
