--- a/src/ui/components/RightSidebar/RightSidebar.css
+++ b/src/ui/components/RightSidebar/RightSidebar.css
@@ -1,6 +1,6 @@
 .right-sidebar {
   background: var(--grey-10);
-  border-left: 2px solid var(--grey-20);
+  border-left: 1px solid var(--theme-splitter-color);
   height: 100%;
   background: var(--grey-10);
   display: flex;
@@ -15,11 +15,15 @@
 
 .right-sidebar .drawer {
   padding: 8px;
-  border-left: 2px solid var(--grey-20);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
+
+.right-sidebar .drawer:not(:only-child) {
+  border-left: 1px solid var(--theme-splitter-color);
+}
+
 .right-sidebar .drawer button:hover,
 .right-sidebar.expanded .drawer button,
 .right-sidebar.expanded .drawer button:focus {
