--- a/src/ui/components/RightSidebar/RightSidebar.css
+++ b/src/ui/components/RightSidebar/RightSidebar.css
@@ -7,12 +7,22 @@
   flex-shrink: 0;
 }
 
+.right-sidebar .drawer .buttons {
+  display: flex;
+  flex-direction: column;
+}
+
 .right-sidebar .drawer button {
   border: 4px solid transparent;
   border-radius: 8px;
   cursor: pointer;
+  margin-bottom: 10px;
 }
 
+.right-sidebar .drawer button .img {
+  width: 20px;
+  height: 20px;
+}
 .right-sidebar .drawer {
   padding: 8px;
   display: flex;
