--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -14,9 +14,11 @@
 }
 
 #toolbox-timeline {
-  height: 35px;
+  height: 64px;
   background: var(--theme-toolbar-background);
   border-top: 1px solid var(--theme-splitter-color);
+  border-bottom: 1px solid var(--theme-splitter-color);
+
 }
 
 #toolbox-toolbar {
