--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -64,6 +64,7 @@
   box-shadow: 0px 3px 4px #eaeaea;
   border-radius: 3px;
   z-index: 101;
+  font-size: 1rem;
 }
 
 .comments-container .comment-body {
@@ -99,12 +100,11 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  line-height: 2rem;
+  line-height: 1.75em;
 }
 
 .comment-description {
-  font-size: 1.3rem;
-  line-height: 2rem;
+  line-height: 1.75em;
   color: #737373;
 }
 
