--- a/src/devtools/client/shared/components/splitter/SplitBox.css
+++ b/src/devtools/client/shared/components/splitter/SplitBox.css
@@ -91,3 +91,10 @@
 .split-box.dragging > .uncontrolled {
   pointer-events: none;
 }
+
+/* This disables splitter bar dragging when the user is 
+in the console. Dragging/resizing should only work in the debugger
+or the inspector where the split console can be displayed.  */
+#toolbox.console .split-box.horz > .splitter {
+  pointer-events: none;
+}
