--- a/src/styles.css
+++ b/src/styles.css
@@ -82,8 +82,19 @@
   z-index: 99;
 }
 
-.A11y-mouse, .A11y-keyboard {
+.A11y-mouse,
+.A11y-keyboard {
   width: 100%;
+}
+
+.webconsole-app {
+  height: 100%;
+  overflow: hidden;
+}
+
+#toolbox-content-console {
+  height: 100%;
+  overflow: hidden;
 }
 
 @import url("devtools/client/themes/variables.css");
