--- a/src/devtools/client/themes/webconsole.css
+++ b/src/devtools/client/themes/webconsole.css
@@ -63,10 +63,6 @@
 
 /* General output styles */
 
-* {
-  box-sizing: border-box;
-}
-
 /*
  * Stack messages on the z axis so that we can make their borders overlap
  * and show color borders on top:
@@ -206,9 +202,7 @@
 }
 
 /* Center first level indent within the left gutter */
-.webconsole-app
-  .message:not(.startGroup):not(.startGroupCollapsed)
-  > .indent[data-indent="1"] {
+.webconsole-app .message:not(.startGroup):not(.startGroupCollapsed) > .indent[data-indent="1"] {
   margin-inline-start: calc(1px + var(--console-icon-horizontal-offset));
   margin-inline-end: calc(11px - var(--console-icon-horizontal-offset));
 }
@@ -518,36 +512,9 @@ a.learn-more-link.webconsole-learn-more-link {
   font-style: normal;
 }
 
-/*
-  This element contains the different toolbars in the console
-    - primary, containing the clear messages button and the text search input, and a
-      checkbox (Persist logs or Show Content Messages).
-      It can expand as much as it needs.
-    - close button, close the split console panel. This button will always be displayed on
-      righ-top of the toolbar.
-    - secondary, containing the filter buttons (Error, Warning, …). It's placed inside the
-      primary toolbar if there's enought space.
-
-  We have 2 different layout:
-
-  Narrow:
-
-  --------------------------------------------------------------
-  | 🗑 - Filter Input                                      | ✕ |
-  --------------------------------------------------------------
-  | Error - Warning - Log - Info - Debug - CSS - Network - XHR |
-  --------------------------------------------------------------
-
-  And wide:
-
-  --------------------------------------------------------------------------------------
-  | 🗑 - Filter Input | Error - Warning - Log - Info - Debug - CSS - Network - XHR | ✕ |
-  --------------------------------------------------------------------------------------
-*/
 /* NOTE: the firefox implementation relies on subgrid, which is not implemented in chrome */
 .webconsole-filteringbar-wrapper {
   display: flex;
-  grid-template-columns: 1fr auto;
   --primary-toolbar-height: 29px;
 }
 
@@ -570,7 +537,6 @@ a.learn-more-link.webconsole-learn-more-link {
   align-items: center;
   align-self: stretch;
   user-select: none;
-  grid-column: 1 / -1;
   min-height: var(--primary-toolbar-height);
 }
 
@@ -578,11 +544,12 @@ a.learn-more-link.webconsole-learn-more-link {
   margin-inline: 5px;
 }
 
+.toolbox-panel.active #split-console-close-button {
+  display: none;
+}
+
 .split-console-close-button-wrapper {
   min-height: var(--primary-toolbar-height);
-  /* We will need to display the close button in the right-top always. */
-  grid-column: -1 / -2;
-  grid-row: 1 / 2;
   padding-inline-end: 0;
 }
 
@@ -597,18 +564,6 @@ a.learn-more-link.webconsole-learn-more-link {
   height: 100%;
   margin: 0;
 }
-
-/* It's important to keep this in px as it's used in JS to control the display mode
-   * of the filter toolbar. */
-/* Prevent the filter height from devtools-searchbox */
-
-/*.webconsole-filterbar-primary .devtools-searchbox {
-  align-self: stretch;
-  height: unset;
-  flex: 1 1 100%;
-  margin-inline-start: 1px;
-  min-width: 150px;
-}*/
 
 .webconsole-filterbar-primary .filter-checkbox {
   flex-shrink: 0;
@@ -880,14 +835,8 @@ a.learn-more-link.webconsole-learn-more-link {
 
 /* Center the collapse button in the left gutter (first-level only) */
 .webconsole-app .message.network > .collapse-button,
-.webconsole-app
-  .message.startGroup
-  > .indent[data-indent="0"]
-  ~ .collapse-button,
-.webconsole-app
-  .message.startGroupCollapsed
-  > .indent[data-indent="0"]
-  ~ .collapse-button {
+.webconsole-app .message.startGroup > .indent[data-indent="0"] ~ .collapse-button,
+.webconsole-app .message.startGroupCollapsed > .indent[data-indent="0"] ~ .collapse-button {
   width: 24px;
   margin-inline-start: var(--console-icon-horizontal-offset);
   margin-inline-end: calc(4px - var(--console-icon-horizontal-offset));
@@ -895,14 +844,8 @@ a.learn-more-link.webconsole-learn-more-link {
 
 /* Use a bigger arrow that is visually similar to other icons (10px) */
 .webconsole-app .message.network > .collapse-button::before,
-.webconsole-app
-  .message.startGroup
-  > .indent[data-indent="0"]
-  ~ .collapse-button::before,
-.webconsole-app
-  .message.startGroupCollapsed
-  > .indent[data-indent="0"]
-  ~ .collapse-button::before {
+.webconsole-app .message.startGroup > .indent[data-indent="0"] ~ .collapse-button::before,
+.webconsole-app .message.startGroupCollapsed > .indent[data-indent="0"] ~ .collapse-button::before {
   width: 100%;
   fill: var(--theme-icon-dimmed-color);
 }
