--- a/src/ui/components/Header.css
+++ b/src/ui/components/Header.css
@@ -76,3 +76,10 @@
   cursor: pointer;
   text-decoration: underline;
 }
+
+.loading-bar {
+  height: 4px;
+  background: linear-gradient(138.3deg, #236eff 7.98%, #71e5ff 93.53%);
+
+  animation-duration: 500;
+}
