--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Sources.css
@@ -15,37 +15,15 @@
   user-select: none;
 }
 
-.sources-clear-root {
-  padding: 4px 8px;
-  width: 100%;
-  text-align: start;
-  white-space: nowrap;
-  color: inherit;
-  display: flex;
-  flex-wrap: wrap;
-  border-bottom: 1px solid var(--theme-splitter-color);
-}
-
-.sources-clear-root .home {
-  background-color: var(--theme-icon-dimmed-color);
-}
-
-.sources-clear-root .breadcrumb {
-  width: 5px;
-  margin: 0 2px 0 6px;
-  vertical-align: bottom;
-  background: var(--theme-text-color-alt);
-}
-
-.sources-clear-root-label {
-  margin-left: 5px;
-  line-height: 16px;
-}
-
 .sources-pane {
   display: flex;
   flex: 1;
   flex-direction: column;
+}
+
+.sources-list .img.blackBox {
+  mask-size: 13px;
+  background-color: var(--theme-icon-checked-color);
 }
 
 .sources-list {
@@ -161,8 +139,7 @@
   width: 100%;
   height: 2px;
   background-color: var(--tab-line-color, transparent);
-  transition: transform 250ms var(--animation-curve),
-    opacity 250ms var(--animation-curve);
+  transition: transform 250ms var(--animation-curve), opacity 250ms var(--animation-curve);
   opacity: 0;
   transform: scaleX(0);
 }
@@ -187,67 +164,4 @@
 .source-outline-panel {
   flex: 1;
   overflow: auto;
-}
-
-.source-outline-panel.has-root > div {
-  height: 100%;
-}
-
-.source-outline-panel.has-root .thread-header {
-  margin-top: 4px;
-}
-
-.sources-list .img.blackBox {
-  mask-size: 13px;
-  background-color: var(--theme-icon-checked-color);
-}
-
-/*
-  Custom root styles
-*/
-.sources-pane.sources-list-custom-root {
-  display: block;
-  position: relative;
-}
-
-.sources-list-custom-root .sources-pane {
-  display: block;
-}
-
-.sources-list-custom-root .no-sources-message {
-  position: absolute;
-  top: 26px;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-/* Removes start margin when a custom root is used */
-.sources-list-custom-root
-  .tree
-  > .tree-node[data-expandable="false"][aria-level="0"] {
-  padding-inline-start: 4px;
-}
-
-.sources-list .tree-node[data-expandable="false"] .tree-indent:last-of-type {
-  margin-inline-end: 0;
-}
-
-.thread-header {
-  margin-top: 10px;
-}
-
-.thread-header .img.worker,
-.thread-header .img.file {
-  margin-top: -1px;
-  margin-inline-end: 4px;
-  margin-inline-start: 2px;
-}
-
-.thread-header .img.file {
-  margin-top: -2px;
-}
-
-.thread-header .label {
-  line-height: 15px;
 }
