Add a loading indicator

--- a/src/ui/components/Recordings/Recordings.css
+++ b/src/ui/components/Recordings/Recordings.css
@@ -117,3 +117,11 @@
   background: #f0f2f5;
   height: 100%;
 }
+
+.loading-pane {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
