--- a/src/ui/components/Recordings/Recordings.css
+++ b/src/ui/components/Recordings/Recordings.css
@@ -7,13 +7,18 @@
   justify-content: center;
 }
 
-.recording {
-  max-width: 420px;
-  min-width: 300px;
-  padding: 40px;
+.recordings .recording:hover {
+  cursor: pointer;
 }
 
-.recording .title {
+.recordings .recording {
+  max-width: 420px;
+  min-width: 300px;
+  padding: 10px;
+  margin: 20px;
+}
+
+.recordings .recording .title {
   font-size: 16px;
   overflow: hidden;
   margin-top: 12px;
@@ -26,14 +31,14 @@
   border: none;
 }
 
-.recording .secondary {
+.recordings .recording .secondary {
   color: var(--secondary-color);
   line-height: 20px;
   font-size: 14px;
   font-weight: 400;
 }
 
-.recording .screenshot {
+.recordings .recording .screenshot {
   width: 100%;
   height: 240px;
   background: #ccc;
@@ -42,17 +47,17 @@
   position: relative;
 }
 
-.recording .screenshot img {
+.recordings .recording .screenshot img {
   height: 100%;
   object-fit: contain;
   width: 100%;
 }
 
-.recording .screenshot:hover .overlay {
+/* .recordings  .recording .screenshot:hover .overlay {
   visibility: visible;
-}
+} */
 
-.recording .overlay {
+.recordings .recording .overlay {
   display: none;
   position: absolute;
   top: 0;
@@ -66,7 +71,7 @@
   background-color: rgba(0, 0, 0, 0.3);
 }
 
-.recording button.link {
+.recordings .recording button.link {
   width: 50px;
   height: 50px;
   background: white;
