[Console] Add the source location for each console message
This also imports components-frame.css to properly style the source link.

--- a/src/styles.css
+++ b/src/styles.css
@@ -82,7 +82,8 @@
   z-index: 99;
 }
 
-.A11y-mouse, .A11y-keyboard {
+.A11y-mouse,
+.A11y-keyboard {
   width: 100%;
 }
 
@@ -98,6 +99,7 @@
 
 @import url("devtools/client/themes/variables.css");
 @import url("devtools/client/themes/webconsole.css");
+@import url("devtools/client/themes/components-frame.css");
 @import url("devtools/client/themes/markup.css");
 @import url("devtools/client/themes/common.css");
 @import url("devtools/client/debugger/dist/vendors.css");
