--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -16,7 +16,10 @@
   outline: none;
 }
 
-.comment-marker:hover, .comment-marker.hovered, .comment-marker.expanded, .create-comment:hover {
+.comment-marker:hover,
+.comment-marker.hovered,
+.comment-marker.expanded,
+.create-comment:hover {
   margin-top: -1px;
   animation-duration: 200ms;
   background-color: transparent;
@@ -117,14 +120,4 @@
 
 .comment-jump:hover {
   cursor: pointer;
-}
-
-.dropdown-panel .menu-item {
-  padding: 4px 8px;
-  color: var(--theme-body-color);
-}
-
-.dropdown-panel .menu-item:hover {
-  cursor: pointer;
-  background-color: var(--theme-button-background);
 }
