--- a/src/ui/components/Account/Account.css
+++ b/src/ui/components/Account/Account.css
@@ -5,7 +5,7 @@
   margin-inline-end: 1rem;
   background-image: url(https://samherbert.net/svg-loaders/svg-loaders/oval.svg);
   background-size: 100% 100%;
-  animation: spin .7s linear infinite;
+  animation: spin 0.7s linear infinite;
 }
 
 .user-prompt.clicked button .spinner {
@@ -13,7 +13,7 @@
 }
 
 .user-prompt button.jump {
-  animation: jump .5s linear alternate 3;
+  animation: jump 0.5s linear alternate 3;
   box-shadow: 0px 0px 5px 0px var(--light-grey);
 }
 
@@ -38,11 +38,32 @@
 }
 
 @keyframes jump {
-  0%   {transform: translate(0,0);}
-  10%  {transform: translate(0,-6px);}
-  30%  {transform: translate(0,-9px);}
-  50%  {transform: translate(0,-10px);}
-  70%  {transform: translate(0,-9px);}
-  90%  {transform: translate(0,-6px);}
-  100% {transform: translate(0,0px);}
+  0% {
+    transform: translate(0, 0);
+  }
+  10% {
+    transform: translate(0, -6px);
+  }
+  30% {
+    transform: translate(0, -9px);
+  }
+  50% {
+    transform: translate(0, -10px);
+  }
+  70% {
+    transform: translate(0, -9px);
+  }
+  90% {
+    transform: translate(0, -6px);
+  }
+  100% {
+    transform: translate(0, 0px);
+  }
+}
+
+.loading-message {
+  text-align: center;
+  margin-top: 3rem;
+  font-size: 1.3rem;
+  color: var(--grey-60);
 }
