--- a/src/devtools/client/themes/webconsole.css
+++ b/src/devtools/client/themes/webconsole.css
@@ -122,9 +122,8 @@
   }
 }
 
-/* Always hide the border of the first message, but keep its spacing */
 .webconsole-app .message:first-child {
-  border-top-color: transparent !important;
+  margin-top: 0px;
 }
 
 /* We already paint a top border on jsterm-input-container (and we need to keep
@@ -266,6 +265,11 @@
   flex: auto;
   min-width: 0px;
   margin: var(--console-output-vertical-padding) 0;
+}
+
+.webconsole-app .message.paused:not(.paused-before) > .message-body-wrapper {
+  border-top-width: 2px;
+  margin: calc(var(--console-output-vertical-padding) - 1px) 0 var(--console-output-vertical-padding);
 }
 
 .webconsole-app .message-body-wrapper .table-widget-body {
@@ -930,14 +934,8 @@ a.learn-more-link.webconsole-learn-more-link {
 }
 
 .webconsole-app .message.paused:not(.paused-before) {
-  border-top-color: #5b41ff;
   /* always show the border, even for the last child */
-  border-top-width: 2px;
-}
-
-.webconsole-app .message.paused ~ .message .message-body-wrapper,
-.webconsole-app .message.paused.paused-before .message-body-wrapper {
-  opacity: 0.5;
+  border-top: 2px solid #5b41ff;
 }
 
 .webconsole-app .message.paused.paused-before .message-body-wrapper,
@@ -953,10 +951,6 @@ a.learn-more-link.webconsole-learn-more-link {
 .webconsole-app .message.paused {
   z-index: 3;
   margin-bottom: 0px;
-}
-
-.webconsole-app .message.paused ~ .message .message-body-wrapper {
-  opacity: 0.5;
 }
 
 /** Utils **/
@@ -1061,6 +1055,14 @@ a.learn-more-link.webconsole-learn-more-link {
 }
 
 .message:hover .button .img {
+  opacity: 100%;
+}
+
+.message .close-btn {
+  opacity: 0;
+}
+
+.message:hover .close-btn {
   opacity: 100%;
 }
 
