--- a/src/ui/components/Timeline/Timeline.css
+++ b/src/ui/components/Timeline/Timeline.css
@@ -138,11 +138,15 @@
 
 .replay-player .scrubber {
   position: absolute;
-  height: 100%;
+  height: 30px;
   width: 1px;
   pointer-events: none;
   background: transparent;
   z-index: 1000;
+}
+
+.replay-player .scrubber.hovered path {
+  fill: var(--hover-scrubber-line-background)
 }
 
 .replay-player .scrubber.hovered {
@@ -152,7 +156,7 @@
 /* The scrubber is 9px wide, so shifting it 4px to the left
 gets the scrubber's center position (5px) right on top of the
 pause line or the hover preview line */
-.replay-player .scrubber img {
+.replay-player .scrubber svg {
   margin-left: -4px;
 }
 
