Add private/public to dropdown in recordings viewer

--- a/src/ui/components/Recordings/Recordings.css
+++ b/src/ui/components/Recordings/Recordings.css
@@ -44,6 +44,10 @@
   font-weight: 400;
 }
 
+.recordings .recording .permissions {
+  line-height: 2em;
+}
+
 .recordings .recording .screenshot {
   width: 100%;
   height: 240px;
